# MyRustApp

./: .gitignore  APK体积优化报告.md  README.md  Rust-Android-Dev-Guide.md  Rust-Kotlin-Android-从0到1.md  rust_kotlin_android_开发提示词.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/myrustapp/ui/main/: MainScreenTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/myrustapp/: MainActivity.kt  NativeLib.kt  Navigation.kt  NavigationKeys.kt
app/src/main/java/com/example/myrustapp/data/: DataRepository.kt
app/src/main/java/com/example/myrustapp/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/myrustapp/ui/main/: CounterScreen.kt  MainScreen.kt  MainScreenViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/myrustapp/ui/main/: MainScreenViewModelTest.kt
native_lib/: Cargo.toml
native_lib/src/: lib.rs
