[package]
name = "native_lib"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.22.4"

[profile.release]
opt-level = "z"       # 最小体积优化
lto = true            # 链接时优化
codegen-units = 1     # 单代码生成单元，利于内联
strip = true          # 剥离调试符号
panic = "abort"       # 移除 panic unwind 代码
